resolved errors in junit tests